Adding new adapter; shift register, 3 wire

--- a/mainpage.dox
+++ b/mainpage.dox
@@ -3,9 +3,10 @@
 The LCD library provides an abstract interface for LCD devices and an
 adapter design pattern to allow device drivers to be reused even when
 LCD device communication changes. The library includes device drivers
-for MAX72XX and HD44780, and adapter using GPIO and TWI (PCF8574).
+for MAX72XX and HD44780, and adapter using GPIO, Shift Register, and
+TWI (PCF8574).
 
-Version: 1.0
+Version: 1.1
 */
 
 /** @page License
