--- a/mainpage.dox
+++ b/mainpage.dox
@@ -3,8 +3,9 @@
 The LCD library provides an abstract interface for LCD devices and an
 adapter design pattern to allow device drivers to be reused even when
 LCD device communication changes. The library includes device drivers
-for MAX72XX and HD44780, and adapter using GPIO, Shift Register, and
-TWI (PCF8574).
+for MAX72XX and HD44780, and adapter using GPIO (Port4b), Shift
+Register (SR3W), and PCF8574 based modules (MJKDZ, DFRobot_IIC,
+GY_IICLCD).
 
 Version: 1.1
 */
